(fix) increase spacing between bullet points
This is primarily for the bullets on the "before we start we want to
check if this is an emergency" page, but I think it's probably a general
change we want across the site.

Chosen to use em, so that it's relative to the size of the text.

--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -30,6 +30,10 @@ main {
   ul {
     list-style-type: disc;
     padding-left: 20px;
+
+    li {
+      margin-bottom: 0.5em;
+    }
   }
 
   .box-highlight {
